--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <main>
     <section id="login">
       <div id="foto">
-        Foto
+        
       </div>
       <div id="formulario">
         <h1>Login</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quas beatae iure, dolores aliquid impedit ipsum neque repudiandae. Repellat quo, minima at provident corrupti culpa officiis aspernatur omnis architecto quidem!</p>
+        <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer suas configurações no seu ambiente</p>
       </div>
     </section>
   </main>
