--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="stylesheet" href="estilos/style.css">
   <link rel="stylesheet" href="estilos/media-querie.css">
 </head>
@@ -13,11 +14,25 @@
   <main>
     <section id="login">
       <div id="foto">
-        
+
       </div>
       <div id="formulario">
         <h1>Login</h1>
         <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer suas configurações no seu ambiente</p>
+        <form action="" autocomplete="on">
+          <div class="campo">
+            <span class="material-symbols-outlined">person</span>
+            <input type="email" name="email" id="iemail" placeholder="seu email" autocomplete="email" required>
+            <label for="iemail">Login</label>
+          </div>
+          <div class="campo">
+            <span class="material-symbols-outlined">vpn_key</span>
+            <input type="password" name="Senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="30">
+            <label for="isenha">Senha</label>
+          </div>
+          <input type="submit" value="Entrar">
+          <a href="">Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
+        </form>
       </div>
     </section>
   </main>
